Adapt rest of the chaos experiments to new API

--- a/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
@@ -1,33 +1,36 @@
 {{- if .Values.networkDelayChaos.enabled -}}
 {{/*
-Network Partition action separates pods into several independent subnets by blocking communication between them.
+This configuration causes a latency in the network connections of the target Pods
 */}}
 apiVersion: chaos-mesh.org/v1alpha1
-kind: NetworkChaos
+kind: Schedule
 metadata:
-  name: network-delay
+  name: schedule-network-delay
 spec:
-  action: delay
-  mode: fixed-percent
-  {{- if eq .Values.networkDelayChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low | quote }}
-  {{- else if eq .Values.networkDelayChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high | quote }}
-  {{- else }}
-  value: {{ .Values.mode.fixPercent.medium | quote }}
-  {{- end }}
-  selector:
-    namespaces:
-      - kubedepend
-  delay:
+  schedule: '*/1 * * * *'
+  historyLimit: 5
+  concurrencyPolicy: 'Forbid'
+  type: 'NetworkChaos'
+  networkChaos:
+    action: delay
+    mode: fixed-percent
     {{- if eq .Values.networkDelayChaos.strength "low" }}
-    latency: "500ms"
+    value: {{ .Values.mode.fixPercent.low | quote }}
     {{- else if eq .Values.networkDelayChaos.strength "high" }}
-    latency: "2000ms"
+    value: {{ .Values.mode.fixPercent.high | quote }}
     {{- else }}
-    latency: "1000ms"
+    value: {{ .Values.mode.fixPercent.medium | quote }}
     {{- end }}
-  duration: "60s"
-  scheduler:
-    cron: "@every 60s"
+    selector:
+      namespaces:
+        - kubedepend
+    delay:
+      {{- if eq .Values.networkDelayChaos.strength "low" }}
+      latency: "500ms"
+      {{- else if eq .Values.networkDelayChaos.strength "high" }}
+      latency: "2000ms"
+      {{- else }}
+      latency: "1000ms"
+      {{- end }}
+    duration: "60s"
 {{- end }}
