--- a/kubedepend/charts/kubedepend-chaos/templates/pod-failure-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/pod-failure-chaos.yaml
@@ -12,8 +12,8 @@ metadata:
   name: schedule-pod-failure-worker
 spec:
   schedule: '*/3 * * * *'
-  historyLimit: 2
-  concurrencyPolicy: 'Allow'
+  historyLimit: 5
+  concurrencyPolicy: 'Forbid'
   type: 'PodChaos'
   podChaos:
     action: pod-failure
