--- a/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
@@ -1,31 +1,34 @@
 {{- if .Values.stressCpuChaos.enabled -}}
 apiVersion: chaos-mesh.org/v1alpha1
-kind: StressChaos
+kind: Schedule
 metadata:
-  name: burn-cpu
+  name: schedule-burn-cpu
 spec:
-  mode: fixed-percent
-  {{- if eq .Values.stressCpuChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low | quote }}
-  {{- else if eq .Values.stressCpuChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high | quote }}
-  {{- else }}
-  value: {{ .Values.mode.fixPercent.medium | quote }}
-  {{- end }}
-  selector:
-    namespaces:
-      - kubedepend
-  stressors:
-    cpu:
-      workers: 4
-      {{- if eq .Values.stressCpuChaos.strength "low" }}
-      load: 20
-      {{- else if eq .Values.stressCpuChaos.strength "high" }}
-      load: 80
-      {{- else }}
-      load: 50
-      {{- end }}
-  duration: "60s"
-  scheduler:
-    cron: "@every 2m"
+  schedule: '*/2 * * * *'
+  historyLimit: 5
+  concurrencyPolicy: 'Forbid'
+  type: 'StressChaos'
+  stressChaos:
+    mode: fixed-percent
+    {{- if eq .Values.stressCpuChaos.strength "low" }}
+    value: {{ .Values.mode.fixPercent.low | quote }}
+    {{- else if eq .Values.stressCpuChaos.strength "high" }}
+    value: {{ .Values.mode.fixPercent.high | quote }}
+    {{- else }}
+    value: {{ .Values.mode.fixPercent.medium | quote }}
+    {{- end }}
+    selector:
+      namespaces:
+        - kubedepend
+    stressors:
+      cpu:
+        workers: 4
+        {{- if eq .Values.stressCpuChaos.strength "low" }}
+        load: 20
+        {{- else if eq .Values.stressCpuChaos.strength "high" }}
+        load: 80
+        {{- else }}
+        load: 50
+        {{- end }}
+    duration: "60s"
 {{- end }}
