--- a/kubedepend/charts/kubedepend-chaos/templates/stress-mem-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/stress-mem-chaos.yaml
@@ -1,30 +1,34 @@
 {{- if .Values.stressMemChaos.enabled -}}
+
 apiVersion: chaos-mesh.org/v1alpha1
-kind: StressChaos
+kind: Schedule
 metadata:
-  name: burn-memory
+  name: schedule-burn-memory
 spec:
-  mode: fixed-percent
-  {{- if eq .Values.stressMemChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low | quote }}
-  {{- else if eq .Values.stressMemChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high | quote }}
-  {{- else }}
-  value: {{ .Values.mode.fixPercent.medium | quote }}
-  {{- end }}
-  selector:
-    namespaces:
-      - kubedepend
-  stressors:
-    memory:
-      {{- if eq .Values.stressMemChaos.strength "low" }}
-      workers: 1
-      {{- else if eq .Values.stressMemChaos.strength "high" }}
-      workers: 3
-      {{- else }}
-      workers: 2
-      {{- end }}
-  duration: "60s"
-  scheduler:
-    cron: "@every 2m"
+  schedule: '*/2 * * * *'
+  historyLimit: 5
+  concurrencyPolicy: 'Forbid'
+  type: 'StressChaos'
+  stressChaos:
+    mode: fixed-percent
+    {{- if eq .Values.stressMemChaos.strength "low" }}
+    value: {{ .Values.mode.fixPercent.low | quote }}
+    {{- else if eq .Values.stressMemChaos.strength "high" }}
+    value: {{ .Values.mode.fixPercent.high | quote }}
+    {{- else }}
+    value: {{ .Values.mode.fixPercent.medium | quote }}
+    {{- end }}
+    selector:
+      namespaces:
+        - kubedepend
+    stressors:
+      memory:
+        {{- if eq .Values.stressMemChaos.strength "low" }}
+        workers: 1
+        {{- else if eq .Values.stressMemChaos.strength "high" }}
+        workers: 3
+        {{- else }}
+        workers: 2
+        {{- end }}
+    duration: "60s"
 {{- end }}
