--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,18 +1,5 @@
 import groovy.json.JsonSlurper
 
-
-
-// def cloudformationStackArn = ""
-def cfStackStatusFilters = [
-    "CREATE_IN_PROGRESS",
-    "CREATE_FAILED",
-    "CREATE_COMPLETE",
-    "ROLLBACK_IN_PROGRESS",
-    "ROLLBACK_FAILED",
-    "ROLLBACK_COMPLETE",
-    "DELETE_IN_PROGRESS"
-]
-
 def createCfStack = null
 
 pipeline { 
@@ -26,7 +13,6 @@ pipeline {
         booleanParam(name: 'DeployTools', defaultValue: true, description: 'Set to TRUE to deploy Grafana, Chaos Mesh, Prometheus, etc.')
         booleanParam(name: 'DeploySUT', defaultValue: true, description: 'Set to TRUE to deploy the SUT')
         booleanParam(name: 'RunMeasurement', defaultValue: true, description: 'Set to TRUE to run the measurements against the SUT')
-        // booleanParam(name: 'DeleteNamespaces', defaultValue: true, description: 'Set to TRUE to delete namespaces')
         booleanParam(name: 'DeleteCFStack', defaultValue: true, description: 'Set to TRUE to delete the CloudFormation stack at the end of the pipeline')
         booleanParam(name: 'CleanWorkSpace', defaultValue: true, description: 'Set to TRUE to delete workspace at the end of the pipeline')
         
@@ -45,12 +31,6 @@ pipeline {
         timeout(time: 6, unit: 'HOURS')
         timestamps()
     }
-
-
-
-    // environment {
-    //    
-    // }
 
     stages {
         stage('Prepare build') {
@@ -94,45 +74,33 @@ pipeline {
                 echo "Check if CloudFormation stack exists"
                 
                 script {
-                    echo "Check if '$CFStackName' CloudFormation stack exists"
-                    def stacksResult = sh(
-                        script: "aws cloudformation describe-stacks --stack-name ${CFStackName} | jq -r '.Stacks'",
-                        returnStdout: true
-                    ).trim()
-                    // def stacksResult = sh(
-                    //     script: "aws cloudformation list-stacks --stack-status-filter ${cfStackStatusFilters.join(' ')} | jq -r '.StackSummaries | map(select(.StackName == \"$CFStackName\"))'",
-                    //     returnStdout: true
-                    // ).trim()
-                    def jsonSlurper = new JsonSlurper()
-                    def stacksResultParsed = jsonSlurper.parseText(stacksResult)
-                    println "Parsed result of stacks: ${stacksResultParsed}"
+                    try {
 
-                    def stack = stacksResultParsed[0]
-                    switch(stack.StackStatus) {
-                        case "CREATE_COMPLETE":
-                            println "CloudFormation stack is ready!"
-                        default:
-                            error("CF stack named '${CFStackName}' with ARN '${stack.StackId}' has status '${stack.StackStatus}' - probably another job is working with it or check AWS Console")
+                        echo "Check if '$CFStackName' CloudFormation stack exists"
+                        def stacksResult = sh(
+                            script: "aws cloudformation describe-stacks --stack-name ${CFStackName} | jq -r '.Stacks'",
+                            returnStdout: true
+                        ).trim()
+                        def jsonSlurper = new JsonSlurper()
+                        def stacksResultParsed = jsonSlurper.parseText(stacksResult)
+                        println "Parsed result of stacks: ${stacksResultParsed}"
 
+                        def stack = stacksResultParsed[0]
+                        switch(stack.StackStatus) {
+                            case "CREATE_COMPLETE":
+                                println "CloudFormation stack is ready!"
+                            default:
+                                error("CF stack named '${CFStackName}' with ARN '${stack.StackId}' has status '${stack.StackStatus}' - probably another job is working with it or check AWS Console")
+
+                        }
+                        createCfStack = false
+
+                    } catch (Exception e) {
+                        echo "CF stack named '${CFStackName}' does not exist, creating..."
+                        println e
+                        // createCfStack = true
                     }
-                    // if (stacksResultParsed.size() == 0) {
-                    //     println "CloudFormation stack(s) '${CFStackName}' does/do not exists (or has/have status DELETE_COMPLETE)"
-                    //     createCfStack = true
-                    // } else if (stacksResultParsed.size() == 1) {
-                    //     println "CloudFormation stack '${CFStackName}' already exists"
-                    //     createCfStack = false
-
-                    //     def stack = stacksResultParsed[0]
-                    //     switch(stack.StackStatus) {
-                    //         case "CREATE_COMPLETE":
-                    //             println "CloudFormation stack is ready!"
-                    //         default:
-                    //             error("CF stack named '${CFStackName}' with ARN '${stack.StackId}' has status '${stack.StackStatus}' - probably another job is working with it or check AWS Console")
-
-                    //     }
-                    // } else {
-                    //     error("Multiple CF stacks exist named '${CFStackName}' with status from  [${cfStackStatusFilters.join(', ')}]")
-                    // }
+                    
                 }
                 
             }
@@ -158,7 +126,6 @@ pipeline {
                     ).trim()
 
                     println "stackId = ${stackId}"
-                    // cloudformationStackArn = stackId
 
                     waitUntil(initialRecurrencePeriod: 15000) {
                         echo "Waiting for CloudFormation stack to get ready..."
@@ -287,17 +254,6 @@ pipeline {
                 }
             }
         }
-
-        // stage('CLEAN - namespaces') {
-        //     when { expression { DeleteNamespaces == true } }
-
-        //     steps {
-        //         echo "Delete namespaces"
-        //         sh """
-        //         |kubectl delete -f k8s-deployment/000-namespaces.yaml
-        //         """.stripMargin('|')
-        //     }
-        // }
 
         stage('CLEAN - infrastructure') {
             when { expression { DeleteCFStack == 'true' } }
