--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -66,7 +66,7 @@ pipeline {
         booleanParam(name: 'DeployTools', defaultValue: true, description: 'Set to TRUE to deploy Grafana, Chaos Mesh, Prometheus, etc.')
 
         separator(name: 'ENHANCEMENTS', sectionHeader: 'Enhancements', separatorStyle: 'border-width: 5', sectionHeaderStyle: '')
-        extendedChoice(name: 'EnhancementsSelect', value: 'Kafka,HPA,KEDA', defaultValue: '', multiSelectDelimiter: ',', visibleItemCount: 3, description: 'Choose which enhancement(s) to use')
+        extendedChoice(name: 'EnhancementsSelect', type: 'PT_CHECKBOX' value: 'Kafka,HPA,KEDA', defaultValue: '', multiSelectDelimiter: ',', visibleItemCount: 3, description: 'Choose which enhancement(s) to use')
 
         separator(name: 'APPLICATION', sectionHeader: 'Application', separatorStyle: 'border-width: 5', sectionHeaderStyle: '')
         booleanParam(name: 'DeployApp', defaultValue: true, description: 'Set to TRUE to deploy the application')
